Added .gitignore generator.